# internal/pharmacy_product/routers.go
@@ -19,13 +19,13 @@ import (
 // Route is the information for every URI.
 type Route struct {
 	// Name is the name of this Route.
-	Name		string
+	Name string
 	// Method is the string for the HTTP method. ex) GET, POST etc..
-	Method		string
+	Method string
 	// Pattern is the pattern of the URI.
-	Pattern	 	string
+	Pattern string
 	// HandlerFunc is the handler function of this route.
-	HandlerFunc	gin.HandlerFunc
+	HandlerFunc gin.HandlerFunc
 }
 
 // NewRouter returns a new router.
@@ -69,10 +69,12 @@ type ApiHandleFunctions struct {
 	PharmacyCategoriesAPI PharmacyCategoriesAPI
 	// Routes for the PharmacyProductsAPI part of the API
 	PharmacyProductsAPI PharmacyProductsAPI
+	// Routes for the DepartmentOrdersAPI part of the API
+	DepartmentOrdersAPI DepartmentOrdersAPI
 }
 
 func getRoutes(handleFunctions ApiHandleFunctions) []Route {
-	return []Route{ 
+	return []Route{
 		{
 			"CreatePharmacy",
 			http.MethodPost,
@@ -120,6 +122,36 @@ func getRoutes(handleFunctions ApiHandleFunctions) []Route {
 			http.MethodPut,
 			"/api/products/:pharmacyId/items/:productId",
 			handleFunctions.PharmacyProductsAPI.UpdateProduct,
+		},
+		{
+			"CreateDepartmentOrder",
+			http.MethodPost,
+			"/api/orders/:pharmacyId/items",
+			handleFunctions.DepartmentOrdersAPI.CreateDepartmentOrder,
+		},
+		{
+			"DeleteDepartmentOrder",
+			http.MethodDelete,
+			"/api/orders/:pharmacyId/items/:orderId",
+			handleFunctions.DepartmentOrdersAPI.DeleteDepartmentOrder,
+		},
+		{
+			"GetDepartmentOrder",
+			http.MethodGet,
+			"/api/orders/:pharmacyId/items/:orderId",
+			handleFunctions.DepartmentOrdersAPI.GetDepartmentOrder,
+		},
+		{
+			"GetDepartmentOrders",
+			http.MethodGet,
+			"/api/orders/:pharmacyId/items",
+			handleFunctions.DepartmentOrdersAPI.GetDepartmentOrders,
+		},
+		{
+			"UpdateDepartmentOrder",
+			http.MethodPut,
+			"/api/orders/:pharmacyId/items/:orderId",
+			handleFunctions.DepartmentOrdersAPI.UpdateDepartmentOrder,
 		},
 	}
 }
